syntax = "proto3";

package user;

service UserService {
    rpc Create (User) returns (Response) {}
    rpc Get (User) returns (Response) {}
    rpc GetAll (Request) returns (Response) {}
    rpc Auth (User) returns (Token) {}
    rpc ValidateToken (Token) returns (Token) {}
}

// 用户信息
message User {
    string id = 1;
    string password = 3;
    string mobile = 4;
    string name = 2;
    string realName = 5;
    string idCard = 6;
    string rewardAddress = 7;
}

message Request {
	string mobile = 1;
}

message Response {
    User user = 1;
    repeated User users = 2;
    repeated Error errors = 3;
}

message Token {
    string token = 1;
    bool valid = 2;
    Error errors = 3;
    string user_id = 4;
}

message Error {
    int32 code = 1;
    string description = 2;
}